# feline-finder

./: .gitignore  README.md  architecture.plantuml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
source/: __init__.py  main.py
source/alerts/: __init__.py
source/alerts/entities/: cat_alert_sender.py
source/alerts/infrastructure/: dummy_alert_sender.py
source/alerts/usecases/: filtered_alert_sender.py  filters.py
source/cat/: __init__.py
source/cat/entities/: cat.py  cat_listing.py
source/monitoring/: __init__.py
source/monitoring/adapters/: cat_monitor.py
source/monitoring/usecases/: tracking.py
source/providers/: __init__.py
source/providers/entities/: cat_provider.py
source/providers/infrastructure/: safe_haven_scraper.py
source/repositories/: __init__.py
source/repositories/entities/: cat_image_repository.py  cat_repository.py
source/repositories/infrastructure/: cat_repository_polars.py  filesystem_image_repository.py
src/: __init__.py  main.py
src/adapters/: __init__.py
src/entities/: __init__.py  cat.py
src/infrastructure/: __init__.py
src/infrastructure/cat_repository/: __init__.py  cat_repository_polars.py
src/infrastructure/scrapers/: __init__.py  safe_haven_scraper.py
src/use_cases/: __init__.py  cat_repository.py  cat_scraper.py  scraping.py  tracking.py
tools/docker/: Dockerfile
