[project]
name = "feline-finder"
version = "0.1.0"
description = "A Python-based project that scrapes and tracks cats available for adoption."
readme = "README.md"
authors = [{ name = "Tristan Tibbs", email = "tristantibbs@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"

# Direct dependencies (runtime)
dependencies = [
   
]

[project.optional-dependencies]
dev = [
    "ruff", "mypy", "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]    # Enable experimental features in Mypy, such as new syntax.
strict = true                                       # Enforce strict type checking to catch potential issues early.

[tool.ruff]
line-length = 80    # Set the maximum line length (80 is the default based on PEP 8).
indent-width = 4    # Number of spaces for indentation (default is 4 spaces).

[tool.ruff.lint]
# E: Enforces PEP 8 errors (syntax or structural errors in the code).
# F: Enforces Pyflakes rules for catching unused imports and variables.
# W: Enables general warnings for non-standard Python usage.
# N: Enforces naming convention rules for variables, functions, and classes.
# BLE: Enforces better list expressions and prevents suboptimal code patterns.
# B: Enforces bug risk and best practice rules.
# A: Enforces anti-pattern detection and prevents commonly misused idioms.
# ICN: Enforces improved code readability and naming conventions.
# Q: Enforces consistent usage of single or double quotes.
# PD: Enforces pandas-specific best practices and catches common issues.
# ANN: Enforces checks for type/return annotations
select = ["E", "F", "W", "N", "BLE", "B", "A", "ICN", "Q", "PD", 'ANN']
